A generated source feature should include the source bundles
https://github.com/eclipse-tycho/tycho/issues/1648