@@ -13,16 +13,23 @@
 package org.eclipse.tycho.test.target;
 
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.apache.maven.it.VerificationException;
 import org.apache.maven.it.Verifier;
+import org.codehaus.plexus.util.xml.Xpp3Dom;
+import org.codehaus.plexus.util.xml.Xpp3DomBuilder;
+import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
 import org.eclipse.tycho.core.osgitools.DefaultBundleReader;
 import org.eclipse.tycho.core.osgitools.OsgiManifest;
 import org.eclipse.tycho.test.AbstractTychoIntegrationTest;
@@ -37,6 +44,12 @@ public class TargetPlatformLocationsTest extends AbstractTychoIntegrationTest {
 		Verifier verifier = getVerifier("target.maven", false, true);
 		verifier.executeGoal("verify");
 		verifier.verifyErrorFreeLog();
+		// check that there are no warnings
+		assertThrows("Warning about missing digest algorithm was printed to the log", VerificationException.class,
+				() -> {
+					verifier.verifyTextInLog(
+							"No digest algorithm is available to verify download of osgi.bundle,org.apache.velocity");
+				});
 	}
 
 	@Test
@@ -102,7 +115,7 @@ public class TargetPlatformLocationsTest extends AbstractTychoIntegrationTest {
 		verifier.verifyErrorFreeLog();
 
 		List<String> out = Files.lines(annotBundleManifestFile.toPath())
-				.filter(line -> !line.contains("Export-Package")).collect(Collectors.toList());
+				.filter(line -> !line.contains("Export-Package")).toList();
 		Files.write(annotBundleManifestFile.toPath(), out, StandardOpenOption.WRITE,
 				StandardOpenOption.TRUNCATE_EXISTING);
 
@@ -120,6 +133,31 @@ public class TargetPlatformLocationsTest extends AbstractTychoIntegrationTest {
 		Verifier verifier = getVerifier("target.maven.autofeature", false, true);
 		verifier.executeGoal("verify");
 		verifier.verifyErrorFreeLog();
+
+		Path targetPlatformRepository = Path.of(verifier.getBasedir(),
+				"test.product/target/targetPlatformRepository/content.xml");
+		try (var stream = Files.newInputStream(targetPlatformRepository)) {
+			Xpp3Dom dom = Xpp3DomBuilder.build(stream, StandardCharsets.UTF_8.displayName());
+			Xpp3Dom[] children = dom.getChild("units").getChildren("unit");
+			Optional<Xpp3Dom> sourceFeature = Stream.of(children)
+					.filter(it -> "org.apache.commons.io.feature.source.feature.group".equals(it.getAttribute("id")))
+					.findFirst();
+			sourceFeature.ifPresentOrElse(it -> {
+				Xpp3Dom[] requirements = it.getChild("requires").getChildren("required");
+				Assert.assertNotEquals("Expecting requirements for org.apache.commons.io.feature.source.feature.group",
+						0, requirements.length);
+				Optional<String> badRequirement = Stream.of(requirements)
+						.map(requirement -> requirement.getAttribute("name")).filter(name -> name == null
+								|| !name.endsWith(".source") && !name.endsWith(".source.feature.jar"))
+						.findFirst();
+				badRequirement.ifPresent(name -> Assert
+						.fail("All requirements are expected to be source requirements, but found '" + name + "'"));
+			}, () -> {
+				Assert.fail("Expecting to find source feature org.apache.commons.io.feature.source.feature.group");
+			});
+		} catch (IOException | XmlPullParserException e) {
+			Assert.fail("Expecting to find valid XML content at " + targetPlatformRepository);
+		}
 	}
 
 	@Test
